# SPCBPT-OptiX7

./: .gitignore  operation.md  readme.md  readme_CN.md
src/: CMakeCache.txt  CMakeLists.txt  config.json  sampleConfig.h.in
src/CMake/: FindCUDA.cmake  FindOptiX.cmake
src/CMake/FindCUDA/: run_nvcc.cmake
src/OptiXPathTracer/: BDPTVertex.h  CMakeLists.txt  DOT_PG_trainingParams.h  PG_common.h  PG_device.h  PG_host.h  Texture.h  cuProg.h  dropOutTracing_common.h  frame_estimation.cpp  frame_estimation.h  hit_program.cu  light_parameters.h  material_parameters.h  optixPathTracer.cpp  optixPathTracer.cu  optixPathTracer.h  pathControl.h  raygen.cu  rmis.h  sceneLoader.cpp  sceneLoader.h  scene_shift.cpp  scene_shift.h  testHeader.cpp  testHeader.h  tester.h  tiny_obj_loader.h  trainingParams.h  whitted.h
src/OptiXPathTracer/cjson/: cJSON.cpp
src/OptiXPathTracer/cuda_history/: hello_cuda.cu  hello_cuda.h
src/OptiXPathTracer/cuda_thrust/: CMakeLists.txt  device_thrust.cu  device_thrust.h
src/OptiXPathTracer/decisionTree/: classTree_common.h  classTree_device.h  classTree_host.h
src/OptiXPathTracer/history_file/: hit_program.cu  path_trace_camera.cu  rmis.h
src/cuda/: BufferView.h  GeometryData.h  Light.h  LocalGeometry.h  LocalShading.h  MaterialData.h  SimpleSample.h  cuProg.cu  cuProg.h  curve.h  helpers.h  sphere.cu  whitted.h  whitted_cuda.h
src/data/: bedroom.scene  bedroom_m.scene  bedroom_normal_c.scene  water.rar
src/data/L_S_SDE/: L_S_SDE.scene  L_S_SDE_close.scene
src/data/artware/: artware_SPPM.scene
src/data/bath/: Bin.mtl  BlackWoodLacquer_0003.mtl  Ceramic_0002.mtl  DarkBorder.mtl  DarkPlastic_0001.mtl  Label.mtl  Mirror_0001.mtl  Plastic.mtl  RoughGlass.mtl  StainlessRough_0006.mtl  Towel_0003.mtl  Trims.mtl  WallRight.mtl  Wall_0008.mtl  WoodFloor.mtl  Wood_0003.mtl  _unnamed_24.mtl  _unnamed_27.mtl  _unnamed_30.mtl  _unnamed_33.mtl  _unnamed_36.mtl  _unnamed_39.mtl  _unnamed_42.mtl  _unnamed_45.mtl  _unnamed_48.mtl  _unnamed_51.mtl  _unnamed_54.mtl  bathroom.scene
src/data/bathroom/: bathroom.scene
src/data/bathroom_b/: scene_no_light_sur.scene  scene_v3.scene  scene_v4.scene  scene_v4_normal_c.scene
src/data/bedroom/: Mesh017.mtl  Mesh018.mtl  Mesh019.mtl  Mesh020.mtl  Mesh021.mtl  Mesh022.mtl  Mesh023.mtl  Mesh024.mtl  Mesh025.mtl  Mesh026.mtl  Mesh027.mtl  Mesh028.mtl  Mesh029.mtl  Mesh030.mtl  Mesh031.mtl  Mesh032.mtl  Mesh033.mtl  Mesh034.mtl  Mesh035.mtl  Mesh036.mtl  Mesh037.mtl  Mesh038.mtl  Mesh039.mtl  Mesh040.mtl  Mesh041.mtl  Mesh042.mtl  Mesh043.mtl  Mesh044.mtl  Mesh045.mtl  Mesh046.mtl  Mesh047.mtl  Mesh048.mtl  Mesh049.mtl  Mesh050.mtl  Mesh051.mtl  Mesh052.mtl  Mesh053.mtl  Mesh054.mtl  Mesh055.mtl  Mesh056.mtl  (+15 more)
src/data/breafast_2.0/: breafast_2.0.scene  breafast_3.0.scene  breafast_4.0.scene  breafast_final.scene  breafast_red.scene
src/data/conference/: conference.scene  conference2.scene  conference3.scene  temp.mtl  temp.ply  untitled.mtl
src/data/cornell_box/: box_lamp_inside.mtl  cbox_ceiling2.mtl  cornell.scene  cornell_LSS.scene  cornell_env.scene  cornell_icoBall.scene  cornell_iconBallOnly.scene  cornell_mirror.scene  cornell_mirror_emiter.scene  cornell_refract.scene  cornell_specular.scene  cornell_test.scene  test.blend
src/data/door/: door.scene
src/data/glass/: glass.scene
src/data/glassroom/: glassroom.scene  glassroom3.scene  glassroom_project.scene  glassroom_project2.scene  glassroom_project3.scene  glassroom_project_final.scene  glassroom_project_test.scene
src/data/hallway/: hallway-teaser.scene  hallway-teaser_2.scene  hallway-teaser_3.scene  hallway-teaser_final.scene  hallway-teaser_su.scene  hallway-teaser_su2.scene  hallway-teaser_su3.scene  hallway-teaser_su3wrong.scene  hallway_teaser_env2.scene
src/data/house/: house_uvrefine2.scene
src/data/kitchen/: kitchen-glass-refine.scene  kitchen-glass.scene  kitchen-glass2.scene  kitchen-gpt.xml  kitchen_final.scene  kitchen_final_old.scene  kitchen_gr2.scene  kitchen_oneLightSource.scene  kitchen_refine.scene
src/data/livi/: Apple_0004.mtl  BlackMarble.mtl  BlackRaughtIron_0003.mtl  BlindEnds_0009.mtl  BlindString_0002.mtl  BlindWoodStrip_0003.mtl  BushLogo_0001.mtl  CandleHolders_0003.mtl  Carpet.mtl  CeilingLampshade.mtl  ChromeHandle.mtl  Dishes_0002.mtl  DullSteel.mtl  LampshadeInner.mtl  LampshaderOuter.mtl  LargePicture.mtl  Magazine.mtl  RadiatorKnobOuter.mtl  RadiatorPanelsEnamel_0001.mtl  RadioDialBack.mtl  RadioDialLine.mtl  RadioHandle.mtl  RadioKnob.mtl  RadioPlastic_0001.mtl  SmallPictureC.mtl  SmallPictureFrame_0002.mtl  Steel_0001.mtl  TableLegs.mtl  Table_0002.mtl  TvScreen.mtl  Walls_0003.mtl  WhitePaint_0009.mtl  livingroom.scene
src/data/newlive/: BlindMaterial_0003.mtl  BlindStringKnob_0002.mtl  Books_0016.mtl  CeilingShadeWire.mtl  Ceramic_0001.mtl  Cushion.mtl  Cushion1_0001.mtl  Cushion3.mtl  DrawerHandles_0003.mtl  Floor.mtl  Gem.mtl  LampStand.mtl  LightFitting_0002.mtl  LoveLettersBack_0006.mtl  LoveLetters_0001.mtl  Picture.mtl  PictureFrame_0001.mtl  RadiatorBase_0002.mtl  RadiatorKnobCentre.mtl  RadioDialRed.mtl  RadioEdges_0002.mtl  RadioGlass.mtl  RadioInside.mtl  RadioMetalRing.mtl  RadioSurround.mtl  SmallPictureA.mtl  SmallPictureB.mtl  SmallPictureD.mtl  Socket_0006.mtl  SofaLeather_0004.mtl  TvBevel.mtl  _unnamed_94.mtl  cover1.001.mtl  livingroom.scene
src/data/projector/: projector.scene  projector1.scene  projector_test.scene
src/data/showcase/: showcase.scene
src/data/test/: Ball.001.mtl  Ball.mtl  Cube.001.mtl  Cube.003.mtl  Cube.004.mtl  Cube.005.mtl  Cube.006.mtl  Cube.007.mtl  Plane.001.mtl  Plane.mtl  SBall.mtl  test.scene
src/data/water/: LSS.scene  empty.scene  flower.scene  simple.scene  simple_n.scene  water.scene  water_smooth.scene
src/data/water_pool/: Cube.001.mtl  Cube.002.mtl  Cube.011.mtl  Cube.047.mtl  Cube.mtl  (+11 more)
src/device_include/: commonStructs.h  random.h
src/lib/: CompileWithTasks.h
src/lib/ImageSource/: CMakeLists.txt  DeviceConstantImageKernels.cu  DeviceMandelbrotImageKernels.cu
src/sutil/: CMakeLists.txt  Camera.h  Scene.cpp  Scene.h  sutil.cpp  sutil.h
(+201 files in other folders)
